<resources>
    <string name="toast_wallet_reset">Your wallet was reset!\nIt will take some time to recover.</string>
    <string name="toast_start_storage_provider_selector_failed">No suitable cloud storage provider is installed.\nYou need something like \"Nextcloud\" or \"Google Drive\".</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to back up your wallet!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network (%1$s%%)</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="mixing_state_progress_mixing">Mixing Coins (%1$s%%)</string>
    <string name="wallet_address_fragment_clipboard_msg">Dash address copied to clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Local Currency</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">Rate</string>
    <string name="exchange_rates_fragment_balance">Balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="exchange_rates_context_set_as_default_title">Set as default</string>
    <string name="wallet_transactions_fragment_empty_text">There are no transactions to display</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already backed up your wallet, to protect against loss?</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter Transactions</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">Dash Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Dash will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Dash due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_coinjoin_timeskew_dialog_msg">Your device time is %s by %d seconds. You cannot use CoinJoin due to this difference.\n\nThe time settings on your device needs to be changed to “Set time automatically” to use CoinJoin.</string>
    <string name="settings_coinjoin_timeskew_dialog_msg">Your device time is off by more than 5 seconds. You cannot use CoinJoin due to this difference.\n\nThe time settings on your device needs to be changed to “Set time automatically” before using CoinJoin.</string>
    <string name="send_coins_activity_title">Send Dash</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
    <string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
    <string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
    <string name="send_coins_fragment_receiving_address_label">Send to</string>
    <string name="send_coins_fragment_receiving_address_hint">type address or name</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid Dash address!</string>
    <string name="send_coins_fragment_receiving_address_own">You\'re about to send to yourself!</string>
    <string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
    <string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
    <string name="send_coins_fragment_amount_label">Amount to send</string>
    <string name="send_coins_fragment_pin_label">Enter PIN</string>
    <string name="send_coins_fragment_hint_fee_economic">A network fee of %s will be paid.</string>
    <string name="send_coins_fragment_hint_fee_priority">A priority fee of %s will be paid. If you care about low fees, use \'priority\' only if you need confirmation as soon as possible.</string>
    <string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
    <string name="send_coins_fragment_hint_replaying">Currently payments are not possible because the wallet is not fully synced with the network</string>
    <string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
    <string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
    <string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
    <string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
    <string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
    <string name="send_coins_fragment_button_send">Send</string>
    <string name="send_coins_fragment_button_back">Back</string>
    <string name="send_coins_fragment_insufficient_money_title">Not enough available coins</string>
    <string name="send_coins_fragment_insufficient_money_msg1">You\'re missing %s.</string>
    <string name="send_coins_fragment_insufficient_money_msg2">Do you want to send with all you have?</string>
    <string name="send_coins_fragment_empty_wallet_failed_title">Emptying of wallet failed</string>
    <string name="send_coins_fragment_state_decrypting">Decrypting…</string>
    <string name="send_coins_preparation_msg">Signing…</string>
    <string name="send_coins_sending_msg">Sending…</string>
    <string name="send_coins_sent_msg">Sent!</string>
    <string name="send_coins_failed_msg">Failed!</string>
    <string name="send_coins_error_msg">Problem sending coins!</string>
    <string name="send_coins_options_fee_category">Fee</string>
    <string name="send_coins_options_fee_category_economic">Economic</string>
    <string name="send_coins_options_fee_category_priority">Priority</string>
    <string name="send_coins_options_empty">Empty wallet</string>
    <string name="sweep_wallet_activity_title">Import Private Key</string>
    <string name="request_coins_activity_title">Request Dash</string>
    <string name="address_book_activity_title">Address book</string>
    <string name="network_monitor_activity_title">Network monitor</string>
    <string name="import_keys_dialog_title">Restore wallet</string>
    <string name="restore_wallet_dialog_replace_warning">You are about to replace your current wallet. Any coins in the current wallet will be lost unless you\'ve got a separate backup of that.</string>
    <string name="import_keys_dialog_warning">Important: Do not load private keys from dubious sources! Others can gain control over your funds if you do.</string>
    <string name="export_keys_dialog_title">Back up wallet</string>
    <string name="backup_wallet_dialog_message">Your backup will be encrypted with the chosen password and written to external storage.</string>
    <string name="backup_wallet_dialog_warning_encrypted">Your wallet is protected by a spending PIN. Make sure you remember the PIN in addition to the backup password!</string>
    <string name="import_export_keys_dialog_password">password</string>
    <string name="backup_wallet_dialog_password_again">again</string>
    <string name="backup_wallet_dialog_password_mismatch">mismatch!</string>
    <string name="import_export_keys_dialog_show">Show password</string>
    <string name="encrypt_keys_dialog_title">Change PIN</string>
    <string name="encrypt_keys_dialog_message">Spending from your wallet will be protected with the chosen PIN.</string>
    <string name="encrypt_keys_dialog_warning">Important: You need to remember your PIN! Do not use common numbers (like birthdates).</string>
    <string name="encrypt_keys_dialog_password_old">Old PIN</string>
    <string name="encrypt_keys_dialog_show">Show PIN</string>
    <string name="preferences_activity_title">Settings</string>
    <string name="preferences_report_issue_title">Report issue</string>
    <string name="report_issue_dialog_description">issue description</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="about_version_title">Version</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_license_title">License</string>
    <string name="about_source_title">Source code</string>
    <string name="about_credits_zxing_title">ZXing, a QR-code processing library</string>
    <string name="about_market_app_title">Google Play page</string>
    <string name="about_market_app_summary">Review or rate the app</string>
    <string name="about_community_googleplus_title">Google+ community</string>
    <string name="about_community_googleplus_summary">Discuss about the app</string>
    <string name="button_help">Help</string>
    <string name="button_request_coins">Request Dash</string>
    <string name="button_send_coins">Send Dash</string>
    <string name="button_scan">Scan</string>
    <string name="private_key_password">PIN</string>
    <string name="private_key_bad_password">Bad PIN!</string>
</resources>