<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/wallet_options_request"
		android:icon="@drawable/ic_send_flipped_white_24dp"
		android:title="@string/request_coins_activity_title"
		android:titleCondensed="@string/button_request_coins"
		android:visible="@bool/wallet_actions_top"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/wallet_options_send"
		android:icon="@drawable/ic_send_white_24dp"
		android:title="@string/send_coins_activity_title"
		android:titleCondensed="@string/button_send_coins"
		android:visible="@bool/wallet_actions_top"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/wallet_options_scan"
		android:icon="@drawable/ic_photo_camera_white_24dp"
		android:title="@string/button_scan"
		android:visible="@bool/wallet_actions_top"
		app:showAsAction="ifRoom" />
	<item
		app:showAsAction="never"
		android:title="@string/wallet_options_safety_menu">
		<menu>
			<item
				android:id="@+id/wallet_options_safety"
				app:showAsAction="never"
				android:title="@string/wallet_options_safety" />
			<item
				android:id="@+id/wallet_options_backup_wallet"
				app:showAsAction="never"
				android:title="@string/export_keys_dialog_title" />
			<item
				android:id="@+id/wallet_options_restore_wallet"
				app:showAsAction="never"
				android:title="@string/import_keys_dialog_title" />
			<item
				android:id="@+id/wallet_options_encrypt_keys"
				app:showAsAction="never"
				android:title="@string/encrypt_keys_dialog_title" />
		</menu>
	</item>
	<item
		android:id="@+id/wallet_options_donate"
		app:showAsAction="never"
		android:title="@string/wallet_options_donate" />
	<item
		android:id="@+id/wallet_options_help"
		app:showAsAction="never"
		android:title="@string/button_help" />

</menu>