<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<Preference
		android:key="about_version"
		android:title="@string/about_version_title" />
	<Preference
		android:summary="© 2011-2016, the Dash Wallet developers\n© 2014-2016 the Dash Wallet Developers"
		android:title="@string/about_copyright_title" />
	<Preference
		android:key="about_license"
		android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
		android:title="@string/about_license_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />
	</Preference>
	<Preference
		android:key="about_source"
		android:summary="https://github.com/HashEngineering/dash-wallet"
		android:title="@string/about_source_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/HashEngineering/dash-wallet" />
	</Preference>
	<Preference
		android:key="about_market_app"
		android:summary="@string/about_market_app_summary"
		android:title="@string/about_market_app_title" />
	<Preference
		android:key="about_community_googleplus"
		android:summary="@string/about_community_googleplus_summary"
		android:title="@string/about_community_googleplus_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://plus.google.com/communities/114489819709980878174" />
	</Preference>
	<!--Preference
		android:key="about_twitter"
		android:summary="\@Dash_wallet"
		android:title="Twitter" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://twitter.com/#!/Dash_wallet" />
	</Preference-->
	<Preference
		android:key="about_credits_bitcoinj"
		android:summary="https://github/HashEngineering/darkcoinj" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github/HashEngineering/darkcoinj" />
	</Preference>
	<Preference
		android:key="about_credits_zxing"
		android:summary="https://github.com/zxing/zxing"
		android:title="@string/about_credits_zxing_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/zxing/zxing" />
	</Preference>
	<!--Preference
		android:key="about_credits_icon"
		android:summary="https://www.dashpay.io/promotional-graphics/"
		android:title="@string/about_credits_icon_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://www.dashpay.io/promotional-graphics/" />
	</Preference-->

</PreferenceScreen>