<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_address_book"
            android:icon="@drawable/ic_menu_address_book"
            android:title="@string/address_book_activity_title" />
        <item
            android:id="@+id/nav_exchenge_rates"
            android:icon="@drawable/ic_menu_exchenge"
            android:title="@string/exchange_rates_activity_title" />
        <item
            android:id="@+id/nav_paper_wallet"
            android:icon="@drawable/ic_menu_paper_wallet"
            android:title="@string/sweep_wallet_activity_title" />
    <item
        android:id="@+id/nav_report_issue"
        android:icon="@drawable/ic_menu_address_book"
        android:title="@string/preferences_report_issue_title"
        />
    <!--</group>-->

    <item android:title="@string/navigation_configuration">
        <menu>
            <item
                android:id="@+id/nav_network_monitor"
                android:icon="@drawable/ic_menu_network_monitor"
                android:title="@string/network_monitor_activity_title" />
            <item
                android:id="@+id/nav_safety"
                android:icon="@drawable/ic_menu_safety"
                android:title="@string/wallet_options_safety_menu" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferences_activity_title" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_disconnect"
        android:icon="@drawable/ic_menu_disconnect"
        android:title="@string/wallet_options_disconnect"
        />

</menu>
