<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/send_coins_options_fee_category"
        android:title="@string/send_coins_options_fee_category"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/send_coins_options_fee_category_economic"
                    android:title="@string/send_coins_options_fee_category_economic" />
                <item
                    android:id="@+id/send_coins_options_fee_category_normal"
                    android:title="@string/send_coins_options_fee_category_normal" />
                <item
                    android:id="@+id/send_coins_options_fee_category_priority"
                    android:title="@string/send_coins_options_fee_category_priority" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/send_coins_options_empty"
        android:title="@string/send_coins_options_empty"
        app:showAsAction="never" />

</menu>