<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/DialogContainer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:text="@string/backup_wallet_dialog_message"
            style="@style/MontserratRegular.DB.12"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <EditText
                android:id="@+id/backup_wallet_dialog_password"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/import_export_keys_dialog_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_marginRight="-2dp"
                android:layout_marginLeft="-2dp"
                style="@style/MontserratSemiBold.DB.14"/>

            <TextView
                android:id="@+id/backup_wallet_dialog_password_strength"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/MontserratSemiBold"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:layout_marginBottom="14dp">

            <EditText
                android:id="@+id/backup_wallet_dialog_password_again"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/backup_wallet_dialog_password_again"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_marginRight="-2dp"
                android:layout_marginLeft="-2dp"
                style="@style/MontserratSemiBold.DB.14"/>

            <TextView
                android:id="@+id/backup_wallet_dialog_password_mismatch"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/backup_wallet_dialog_password_mismatch"
                android:textColor="@color/fg_error"
                style="@style/MontserratSemiBold"
                android:visibility="invisible" />
        </LinearLayout>

        <de.schildbach.wallet.ui.widget.MontserratCheckBox
            android:id="@+id/backup_wallet_dialog_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:checked="false"
            android:text="@string/import_export_keys_dialog_show"
            style="@style/CheckBox"/>

        <TextView
            android:id="@+id/backup_wallet_dialog_warning_encrypted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_wallet_dialog_warning_encrypted"
            android:textColor="@color/fg_less_significant"
            style="@style/MontserratMedium.DB.12"/>

    </LinearLayout>

</ScrollView>