<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:scrollbars="none"
    style="@style/DialogContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/restore_wallet_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding"
            style="@style/MontserratRegular.DB.12"/>

        <Spinner
            android:id="@+id/import_keys_from_storage_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            style="@style/MontserratMedium.DB.12">

            <requestFocus />

        </Spinner>

        <EditText
            android:id="@+id/import_keys_from_storage_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:hint="@string/import_export_keys_dialog_password"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/MontserratMedium.DB.14"/>

        <de.schildbach.wallet.ui.widget.MontserratCheckBox
            android:id="@+id/import_keys_from_storage_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:checked="false"
            android:text="@string/import_export_keys_dialog_show"
            style="@style/CheckBox"/>

        <TextView
            android:id="@+id/restore_wallet_from_storage_dialog_replace_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding"
            android:text="@string/restore_wallet_dialog_replace_warning"
            style="@style/MontserratMedium.DB.12"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding"
            android:layout_marginTop="@dimen/list_entry_padding"
            android:text="@string/import_keys_dialog_warning"
            style="@style/MontserratMedium.DB.12"/>

    </LinearLayout>

</ScrollView>